--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,6 @@ jobs:
         run: |
           go mod download
       - name: Lint
-        uses: Mushus/golangci-linter@v1
+        uses: sjkaliski/go-github-actions/lint@v0.5.0
       - name: Test
         run: go test ./... -run none
