--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,10 +30,9 @@ jobs:
         run: |
           go mod download
       - name: Lint
-        uses: actions-contrib/golangci-lint@master
-        env:
-          GOROOT: ""
+        uses: grandcolline/golang-github-actions@v1.1.0
         with:
-            args: run
+          run: lint
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Test
         run: go test ./... -run none
