--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,9 +1,12 @@
+LT = $(shell cat ~/.lotus/token)
+
 fresh: down up
 .PHONY: fresh-up
 
 down:
-	@docker-compose down
+	@TEXTILE_LOTUS_TOKEN=$(LT) docker-compose down
 .PHONY: down
 
 up: 
-	TEXTILE_LOTUS_TOKEN=$(shell cat ~/.lotus/token) docker-compose up --build 
+	TEXTILE_LOTUS_TOKEN=$(LT) docker-compose up --build 
+.PHONY: up
