--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,4 +30,4 @@ jobs:
         run: |
           go mod download
       - name: Test
-        run: go test ./... -run none
+        run: go test ./... -short
