--- a/cmd/server/Dockerfile
+++ b/cmd/server/Dockerfile
@@ -10,4 +10,6 @@ RUN CGO_ENABLED=0 GOOS=linux go build -o main cmd/server/main.go
 
 FROM alpine
 COPY --from=builder /app/main /app/main
-ENTRYPOINT ["/app/main"]
+COPY --from=builder /app/api/server/ip2location-ip4.bin /app
+WORKDIR /app 
+ENTRYPOINT ["./main"]
