--- a/exe/server/Dockerfile
+++ b/exe/server/Dockerfile
@@ -9,7 +9,7 @@ COPY . .
 RUN CGO_ENABLED=0 GOOS=linux go build -o main cmd/server/main.go
 
 FROM alpine
+COPY --from=builder /app/api/server/ip2location-ip4.bin /app/ip2location-ip4.bin
 COPY --from=builder /app/main /app/main
-COPY --from=builder /app/api/server/ip2location-ip4.bin /app
 WORKDIR /app 
 ENTRYPOINT ["./main"]
