delete prometheus dashboards
Signed-off-by: jsign <jsign.uy@gmail.com>

--- a/docker/grafana/provisioning/dashboards/dashboard.yml
+++ b/docker/grafana/provisioning/dashboards/dashboard.yml
@@ -6,6 +6,6 @@ providers:
   folder: ''
   type: file
   disableDeletion: false
-  editable: true
+  editable: false
   options:
     path: /etc/grafana/provisioning/dashboards
