--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     network_mode: host
     build:
       context: ../
-      dockerfile: cmd/server/Dockerfile
+      dockerfile: exe/server/Dockerfile
     environment:
       - TEXTILE_LOTUS_TOKEN=${TEXTILE_LOTUS_TOKEN}
     ports:
