--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,13 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: 1.13
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+      - name: OpenCL dependencies
+        run: sudo apt-get install mesa-opencl-icd ocl-icd-opencl-dev
       - name: Check out code
         uses: actions/checkout@v1
       - name: Cache dependencies
@@ -25,9 +32,7 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-      - name: Get dependencies
-        if: steps.cache-dependencies.outputs.cache-hit != 'true'
-        run: |
-          go mod download
+      - name: Get extern dependencies
+        run: make all
       - name: Test
-        run: go test ./... -short
+        run: TRUST_PARAMS=1 go test ./... -short -v
