Use ldevnet for tests, Docker fixes, GH Action improv., extend Readme, many misc fixes (#87)
* add dockerignore file

Signed-off-by: jsign <jsign.uy@gmail.com>

* update gitignore

Signed-off-by: jsign <jsign.uy@gmail.com>

* fix & improvements of GHA

Signed-off-by: jsign <jsign.uy@gmail.com>

* use badger2 as required by using lotus depedency

Signed-off-by: jsign <jsign.uy@gmail.com>

* make chainsync tests use ldevnet

Signed-off-by: jsign <jsign.uy@gmail.com>

* run deals module with ldevnet. bugfixes & improv due to test runs

Signed-off-by: jsign <jsign.uy@gmail.com>

* bugfix

Signed-off-by: jsign <jsign.uy@gmail.com>

* fix Dockerfile regarding new dependencies

Signed-off-by: jsign <jsign.uy@gmail.com>

* make all test in index pkg use ldevnet. other refactorings

Signed-off-by: jsign <jsign.uy@gmail.com>

* avoid putting so much pressure by running ldevnet in parallel

Signed-off-by: jsign <jsign.uy@gmail.com>

* improve README with server information

Signed-off-by: jsign <jsign.uy@gmail.com>

* go mod tidy

Signed-off-by: jsign <jsign.uy@gmail.com>

* rebase fix

Signed-off-by: jsign <jsign.uy@gmail.com>

* remove feat branch from GH actions

Signed-off-by: jsign <jsign.uy@gmail.com>

* Makefile improv

Signed-off-by: jsign <jsign.uy@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,11 +15,11 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: 1.13
-      - name: Install Rust
+      - name: Set up Rust
         uses: actions-rs/toolchain@v1
         with:
+          profile: minimal
           toolchain: stable
-          override: true
       - name: Install OpenCL
         run: sudo apt-get update && sudo apt-get install mesa-opencl-icd ocl-icd-opencl-dev
       - name: Check out code
@@ -32,7 +32,5 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-      - name: Get extern dependencies
-        run: make all
       - name: Test
-        run: TRUST_PARAMS=1 go test ./... -short -v
+        run: make test
