--- a/gateway/app/package.json
+++ b/gateway/app/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@improbable-eng/grpc-web": "^0.12.0",
+    "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
@@ -11,10 +13,13 @@
     "@types/node": "^12.12.26",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/recharts": "^1.8.5",
     "google-protobuf": "^3.11.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1",
+    "recharts": "^2.0.0-beta.1",
+    "typeface-roboto": "0.0.75",
     "typescript": "^3.7.5"
   },
   "scripts": {
