use viper for configuration
Signed-off-by: jsign <jsign.uy@gmail.com>

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -5,9 +5,9 @@ fresh: down up
 .PHONY: fresh-up
 
 down:
-	@TEXTILE_LOTUS_TOKEN=$(LT) docker-compose down
+	@TEXFILTOOLS_LOTUSTOKEN=$(LT) docker-compose down
 .PHONY: down
 
 up: 
-	TEXTILE_LOTUS_TOKEN=$(LT) docker-compose up --build 
+	TEXFILTOOLS_LOTUSTOKEN=$(LT) docker-compose up --build 
 .PHONY: up
