--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,19 +9,19 @@ on:
 jobs:
   test:
     name: Test
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Set up Go
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v2-beta
         with:
-          go-version: 1.13
+          go-version: "1.13.8"
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
       - name: Install OpenCL
-        run: sudo apt-get update && sudo apt-get -y install mesa-opencl-icd ocl-icd-opencl-dev
+        run: sudo apt-get install mesa-opencl-icd ocl-icd-opencl-dev
       - name: Check out code
         uses: actions/checkout@v1
       - name: Test
