--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -10,14 +10,14 @@ scrape_configs:
   - job_name: 'prometheus'
     scrape_interval: 5s
     static_configs:
-         - targets: ['localhost:9090']
+         - targets: ['prometheus:9090']
 
   - job_name: 'cadvisor'
     scrape_interval: 5s
     static_configs:
-          - targets: ['localhost:8082']
+          - targets: ['cadvisor:8082']
 
   - job_name: 'textile-fc'
     scrape_interval: 5s
     static_configs:
-          - targets: ['localhost:8888']
+          - targets: ['fil-tools:8888']
