--- a/exe/server/Dockerfile
+++ b/exe/server/Dockerfile
@@ -10,12 +10,19 @@ ENV PATH="/root/.cargo/bin:${PATH}"
 
 RUN mkdir /app 
 WORKDIR /app 
-COPY extern extern
+
+RUN mkdir -p extern extern
+WORKDIR /app/extern
+RUN git clone https://github.com/filecoin-project/filecoin-ffi
+WORKDIR /app/extern/filecoin-ffi
+RUN git checkout 58761d3dca0f3617023240eb8b7f8b324db75b2a
+WORKDIR /app
+COPY Makefile Makefile
+RUN make .filecoin-build
+
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
- 
-RUN make clean build
 RUN GOOS=linux go build -o fil-toolsd exe/server/main.go && \
 go run github.com/GeertJohan/go.rice/rice append --exec fil-toolsd -i ./build
 
