attempt changes to reduce flakyness on CI
Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,4 +26,6 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v1
       - name: Test
+        env:
+          TEXPOWERGATE_CI: 1
         run: make test
