--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,8 @@ on:
 jobs:
   test:
     name: Test
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
+    container: ubuntu:latest
     steps:
       - name: Set up Go
         uses: actions/setup-go@v2-beta
