--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,19 +9,15 @@ on:
 jobs:
   test:
     name: Test
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-      - name: Set up Go
-        uses: actions/setup-go@v2-beta
-        with:
-          go-version: "1.13.8"
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
+          toolchain: nightly
       - name: Install OpenCL
-        run: sudo apt-get install mesa-opencl-icd ocl-icd-opencl-dev
+        run: sudo apt-get update && sudo apt-get install -y mesa-opencl-icd ocl-icd-opencl-dev jq make
       - name: Check out code
         uses: actions/checkout@v1
       - name: Test
