--- a/exe/server/Dockerfile
+++ b/exe/server/Dockerfile
@@ -1,33 +1,14 @@
 FROM golang:1.14 as builder
-RUN apt-get update && apt-get install -y mesa-opencl-icd ocl-icd-opencl-dev
-
-WORKDIR /tmp
-RUN curl https://sh.rustup.rs -sSf > rustup.sh
-RUN chmod 755 rustup.sh
-RUN ./rustup.sh -y
-RUN rm /tmp/rustup.sh
-ENV PATH="/root/.cargo/bin:${PATH}"
 
 RUN mkdir /app 
 WORKDIR /app 
 
-RUN mkdir -p extern extern
-WORKDIR /app/extern
-RUN git clone https://github.com/filecoin-project/filecoin-ffi
-WORKDIR /app/extern/filecoin-ffi
-RUN git checkout 58761d3dca0f3617023240eb8b7f8b324db75b2a
-WORKDIR /app
-COPY Makefile Makefile
-RUN make .filecoin-build
-
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
-RUN GOOS=linux go build -o powd exe/server/main.go && \
-go run github.com/GeertJohan/go.rice/rice append --exec powd -i ./build
+RUN CGO_ENABLED=0 GOOS=linux go build -o powd exe/server/main.go 
 
-FROM ubuntu
-RUN apt-get update && apt-get install -y mesa-opencl-icd ocl-icd-opencl-dev
+FROM alpine
 COPY --from=builder /app/api/server/ip2location-ip4.bin /app/ip2location-ip4.bin
 COPY --from=builder /app/powd /app/powd
 WORKDIR /app 
