--- a/docker/docker-compose-embedded.yaml
+++ b/docker/docker-compose-embedded.yaml
@@ -1,5 +1,8 @@
 version: '3.7'
 
+volumes:
+   pow-embed-shared:
+
 services:
   
   powergate:
@@ -19,6 +22,8 @@ services:
       - TEXPOWERGATE_EMBEDDED=true
       - TEXPOWERGATE_LOTUSHOST=/dns4/lotus/tcp/7777
       - TEXPOWERGATE_IPFSAPIADDR=/dns4/ipfs/tcp/5001
+    volumes:
+      - pow-embed-shared:/tmp/powergate
     restart: unless-stopped
 
   ipfs:
@@ -33,4 +38,6 @@ services:
       - 7777:7777
     environment:
       - TEXLOTUSDEVNET_SPEED=1500
+    volumes:
+     - pow-embed-shared:/tmp/powergate
     restart: unless-stopped
