update lotus-devnet docker image tag
Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

--- a/docker/docker-compose-embedded.yaml
+++ b/docker/docker-compose-embedded.yaml
@@ -33,7 +33,7 @@ services:
     restart: unless-stopped    
 
   lotus:
-    image: textile/lotus-devnet:lotus-master-628a598ca
+    image: textile/lotus-devnet:sha-6d0bae0
     ports:
       - 7777:7777
     environment:
