more changes, finally compiles
Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

--- a/docker/docker-compose-embedded.yaml
+++ b/docker/docker-compose-embedded.yaml
@@ -33,7 +33,7 @@ services:
     restart: unless-stopped    
 
   lotus:
-    image: textile/lotus-devnet:testnet3-ca3d2bf46f69
+    image: textile/lotus-devnet:lotus-testnet3-d41aeb
     ports:
       - 7777:7777
     environment:
