use custom Textile Lotus image
Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -31,11 +31,11 @@ services:
       - textile-fc-lotus:/root/lotus
   
   lotus:
-    image: textile/lotus:latest
+    image: textile/lotus:custom
     volumes:
       - textile-fc-lotus:/data
     ports:
-      - 1234:1234
+      - 1234:1235
       - 5678:5678
     restart: unless-stopped
 
