Use custom Lotus image, HotStore renaming, and misc (#232)
* use custom Textile Lotus image

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* change port due to reverse proxy setup

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* HotStorage: rename Pin to Store

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* create tmp file in tests with correct permissions

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* update suggested deps

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* change to interop dht, and add fchost ping test

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* use container_memory metric for memory

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
       - ipfs
       - lotus
     environment:
-      - TEXPOWERGATE_LOTUSHOST=/dns4/lotus/tcp/1234
+      - TEXPOWERGATE_LOTUSHOST=/dns4/lotus/tcp/1235
       - TEXPOWERGATE_IPFSAPIADDR=/dns4/ipfs/tcp/5001
       - TEXPOWERGATE_LOTUSTOKENFILE=/root/lotus/.lotus/token
       - TEXPOWERGATE_REPOPATH=/root/powergate/.powergate
@@ -31,11 +31,11 @@ services:
       - textile-fc-lotus:/root/lotus
   
   lotus:
-    image: textile/lotus:latest
+    image: textile/lotus:custom
     volumes:
       - textile-fc-lotus:/data
     ports:
-      - 1234:1234
+      - 1235:1235
       - 5678:5678
     restart: unless-stopped
 
