--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions-contrib/golangci-lint@v1
         with:
-          args: "-E golint --timeout 30m"
+          args: "run -E golint --timeout 30m"
   spell-check:
     name: spell-check
     runs-on: ubuntu-latest
