--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -40,7 +40,7 @@ services:
     restart: unless-stopped
 
   ipfs:
-    image: ipfs/go-ipfs:latest
+    image: ipfs/go-ipfs:v0.5.0-rc1
     ports:
       - 5001:5001
     volumes:
