--- a/.golangci.yml
+++ b/.golangci.yml
@@ -18,26 +18,15 @@ linters:
   # - prealloc
 
 issues:
-  # Excluding configuration per-path, per-linter, per-text and per-source
-  exclude-rules:
-    - path: gateway/assets.go
-      linters:
-        - golint
-        - misspell
   exclude-use-default: false
 
 run:
   timeout: 30m
-  skip-dirs:
-    - test/testdata_etc
-    - internal/cache
-    - internal/renameio
-    - internal/robustio
+  skip-files:
+    - gateway/assets.go
 
 # golangci.com configuration
 # https://github.com/golangci/golangci/wiki/Configuration
 service:
   golangci-lint-version: 1.23.x # use the fixed version to not introduce new linters unexpectedly
-  prepare:
-    - echo "here I can run custom commands, but no preparation needed for this repo"
     
