add docs & progress
Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -17,12 +17,9 @@
 # vscode config folder
 .vscode/
 
-.filecoin-build
-.update-modules
-
-api/client/datastore
 pow
 powd
-myfile
+powbench
 
+myfile
 tags
