--- a/docker/docker-compose-embedded.yaml
+++ b/docker/docker-compose-embedded.yaml
@@ -27,7 +27,7 @@ services:
     restart: unless-stopped
 
   ipfs:
-    image: ipfs/go-ipfs:v0.5.0-rc2
+    image: ipfs/go-ipfs:v0.5.0
     ports:
       - 5001:5001
 
