--- a/docker/docker-compose-embedded.yaml
+++ b/docker/docker-compose-embedded.yaml
@@ -27,12 +27,12 @@ services:
     restart: unless-stopped
 
   ipfs:
-    image: ipfs/go-ipfs:v0.5.0-rc2
+    image: ipfs/go-ipfs:v0.5.0
     ports:
       - 5001:5001
 
   lotus:
-    image: textile/lotus-devnet:sha-a9c8768
+    image: textile/lotus-devnet:sha-d2493fb
     ports:
       - 7777:7777
     environment:
