--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -31,7 +31,7 @@ services:
       - textile-fc-lotus:/root/lotus
   
   lotus:
-    image: textile/lotus:559b5e7
+    image: textile/lotus:799f5e5
     volumes:
       - textile-fc-lotus:/data
     ports:
@@ -40,7 +40,7 @@ services:
     restart: unless-stopped
 
   ipfs:
-    image: ipfs/go-ipfs:v0.5.0-rc2
+    image: ipfs/go-ipfs:v0.5.0
     ports:
       - 5001:5001
     volumes:
