--- a/docker/docker-compose-embedded.yaml
+++ b/docker/docker-compose-embedded.yaml
@@ -19,9 +19,9 @@ services:
       - ipfs
       - lotus
     environment:
-      - TEXPOWERGATE_EMBEDDED=true
-      - TEXPOWERGATE_LOTUSHOST=/dns4/lotus/tcp/7777
-      - TEXPOWERGATE_IPFSAPIADDR=/dns4/ipfs/tcp/5001
+      - POWD_EMBEDDED=true
+      - POWD_LOTUSHOST=/dns4/lotus/tcp/7777
+      - POWD_IPFSAPIADDR=/dns4/ipfs/tcp/5001
     volumes:
       - pow-embed-shared:/tmp/powergate
     restart: unless-stopped
