use new devnet (#411)
* update lotus master

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* update devnet

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* update full lotus image

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* update devnet

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* switch test to store 100mb

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* increase job timeout due to using bigger sectors

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* progress

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* fix enough funds

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* fixes

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* update devnet again

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* use configurable bigsector devnet

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* fix

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* make embed run use big sectors

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

--- a/docker/docker-compose-embedded.yaml
+++ b/docker/docker-compose-embedded.yaml
@@ -32,10 +32,11 @@ services:
       - 5001:5001
 
   lotus:
-    image: textile/lotus-devnet:sha-7ed2544
+    image: textile/lotus-devnet:sha-1e166c9
     ports:
       - 7777:7777
     environment:
       - TEXLOTUSDEVNET_SPEED=1500
+      - TEXLOTUSDEVNET_BIGSECTORS=true
     volumes:
      - pow-embed-shared:/tmp/powergate
