readme, embed->devnet, and text improvements
Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,12 +1,12 @@
 down:
 	docker-compose down
-	docker-compose -p embed down
+	docker-compose -p devnet down
 .PHONY: down
 
 up: down
 	docker-compose up --build 
 .PHONY: up
 
-embed: 
-	docker-compose -p embed -f docker-compose-embedded.yaml up --build -V
-.PHONY: embed
+devnet: 
+	docker-compose -p devnet -f docker-compose-devnet.yaml up --build -V
+.PHONY: devnet
