Leverage Lotus -> IPFS integration & more improvements (#414)
* update to preliminary devnet

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* add known temporary deal status

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* add known deal status

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* use unmerged lotus version

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* progress

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* separate data importing

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* consider sizes

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* update rpc

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* unskip two tests

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* ldevnet waiting time depend on numminers

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* renew with same miner

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* test tune

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* fix ipfs ip binding

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* lint

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* regen protos

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* use ipfs for retrieval on the lotus side fix

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* deals: autodelete temp files

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* consider that lotus has nocopy

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* use opt retrieval

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* use fetch instead of retrieve

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* rebasing

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* update lotus

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* update devnet

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* use new devnet

Signed-off-by: Ignacio Hagopi

--- a/docker/docker-compose-devnet.yaml
+++ b/docker/docker-compose-devnet.yaml
@@ -1,7 +1,7 @@
 version: '3.7'
 
 volumes:
-   pow-embed-shared:
+   pow-devnet-shared:
 
 services:
   
@@ -19,11 +19,11 @@ services:
       - ipfs
       - lotus
     environment:
-      - POWD_EMBEDDED=true
+      - POWD_DEVNET=true
       - POWD_LOTUSHOST=/dns4/lotus/tcp/7777
       - POWD_IPFSAPIADDR=/dns4/ipfs/tcp/5001
     volumes:
-      - pow-embed-shared:/tmp/powergate
+      - pow-devnet-shared:/tmp/powergate
     restart: unless-stopped
 
   ipfs:
@@ -32,11 +32,12 @@ services:
       - 5001:5001
 
   lotus:
-    image: textile/lotus-devnet:sha-1e166c9
+    image: textile/lotus-devnet:sha-77f20c7
     ports:
       - 7777:7777
     environment:
       - TEXLOTUSDEVNET_SPEED=1500
       - TEXLOTUSDEVNET_BIGSECTORS=true
+      - TEXLOTUSDEVNET_IPFSADDR=/dns4/ipfs/tcp/5001
     volumes:
-     - pow-embed-shared:/tmp/powergate
+     - pow-devnet-shared:/tmp/powergate
