--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
       - ipfs
       - lotus
     environment:
-      - POWD_LOTUSHOST=/dns4/lotus/tcp/1235
+      - POWD_LOTUSHOST=/dns4/lotus/tcp/1234
       - POWD_IPFSAPIADDR=/dns4/ipfs/tcp/5001
       - POWD_LOTUSTOKENFILE=/root/lotus/.lotus/token
       - POWD_REPOPATH=/root/powergate/.powergate
@@ -31,11 +31,13 @@ services:
       - textile-fc-lotus:/root/lotus
   
   lotus:
-    image: textile/lotus:af1d545
+    image: textile/lotus:75041b9
     volumes:
       - textile-fc-lotus:/data
+    environment:
+      - LOTUS_API_LISTENADDRESS=/ip4/0.0.0.0/tcp/1234/http
     ports:
-      - 1235:1235
+      - 1234:1234
       - 5678:5678
     restart: unless-stopped
 
