--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,9 +1,9 @@
 version: '3.7'
 
 volumes:
-  textile-fc-data:
-  textile-fc-ipfs:
-  textile-fc-lotus:
+  powergate-powd:
+  powergate-ipfs:
+  powergate-lotus:
 
 services:
   
@@ -27,13 +27,13 @@ services:
       - POWD_REPOPATH=/root/powergate/.powergate
     restart: unless-stopped
     volumes:
-      - textile-fc-data:/root/powergate
-      - textile-fc-lotus:/root/lotus
+      - powergate-powd:/root/powergate
+      - powergate-lotus:/root/lotus
   
   lotus:
     image: textile/lotus:06670f4
     volumes:
-      - textile-fc-lotus:/data
+      - powergate-lotus:/data
     environment:
       - LOTUS_API_LISTENADDRESS=/ip4/0.0.0.0/tcp/1234/http
       - LOTUS_CLIENT_USEIPFS=true
@@ -49,7 +49,7 @@ services:
     ports:
       - 5001:5001
     volumes:
-      - textile-fc-ipfs:/data/ipfs
+      - powergate-ipfs:/data/ipfs
     restart: unless-stopped    
     
   prometheus:
