index: new fault index, include new info in miners index (#438)
* rename slash index to fault index

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* update lotus image

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* ffs/cli: always show log history

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* docker/prod: configure Lotus to be connected to IPFS node

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* reputation module improvements

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* give better names to volumes

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* use new api

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* fix tuned params

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* include sector size and active deal in miner index

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* lints

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,9 +1,9 @@
 version: '3.7'
 
 volumes:
-  textile-fc-data:
-  textile-fc-ipfs:
-  textile-fc-lotus:
+  powergate-powd:
+  powergate-ipfs:
+  powergate-lotus:
 
 services:
   
@@ -27,15 +27,18 @@ services:
       - POWD_REPOPATH=/root/powergate/.powergate
     restart: unless-stopped
     volumes:
-      - textile-fc-data:/root/powergate
-      - textile-fc-lotus:/root/lotus
+      - powergate-powd:/root/powergate
+      - powergate-lotus:/root/lotus
   
   lotus:
-    image: textile/lotus:75041b9
+    image: textile/lotus:06670f4
     volumes:
-      - textile-fc-lotus:/data
+      - powergate-lotus:/data
     environment:
       - LOTUS_API_LISTENADDRESS=/ip4/0.0.0.0/tcp/1234/http
+      - LOTUS_CLIENT_USEIPFS=true
+      - LOTUS_CLIENT_IPFSUSEFORRETRIEVAL=true
+      - LOTUS_CLIENT_IPFSMADDR=/dns4/ipfs/tcp/5001
     ports:
       - 1234:1234
       - 5678:5678
@@ -46,7 +49,7 @@ services:
     ports:
       - 5001:5001
     volumes:
-      - textile-fc-ipfs:/data/ipfs
+      - powergate-ipfs:/data/ipfs
     restart: unless-stopped    
     
   prometheus:
