--- a/.github/workflows/ensure-pow-docs.yml
+++ b/.github/workflows/ensure-pow-docs.yml
@@ -1,4 +1,4 @@
-name: Ensure pow docs
+name: Ensure Docs
 on:
   push:
     branches:
@@ -15,5 +15,9 @@ jobs:
         uses: actions/checkout@v1
       - name: Generate docs
         run: make docs-pow
-      - name: Ensure no changes
-        run: git diff-index --quiet HEAD
+      - name: Check if there are changes
+        id: changes
+        uses: UnicornGlobal/has-changes-action@v1.0.11
+      - name: Process changes
+        if: steps.changes.outputs.changed == 1
+        run: exit 1
