update dockerhub tags
Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

--- a/docker/docker-compose-devnet.yaml
+++ b/docker/docker-compose-devnet.yaml
@@ -26,7 +26,7 @@ services:
       - 5001:5001
 
   lotus:
-    image: textile/lotus-devnet:sha-ff3d28e
+    image: textile/lotus-devnet:v0.4.0
     ports:
       - 7777:7777
     environment:
