use versioned tag
Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -30,7 +30,7 @@ services:
       - powergate-lotus:/root/lotus
   
   lotus:
-    image: textile/lotus:ffa7be8
+    image: textile/lotus:v0.4.0
     volumes:
       - powergate-lotus:/data
     environment:
