update deps and gitignore
Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,11 @@
 buildtools/protoc
 buildtools/protoc-gen-go
 
+# File names that can be used for testing.
 myfile
 myfile2
+
+# CidConfig name that can be used for testing.
+pconfig.pow
+
 tags
