--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,7 @@ jobs:
           cp README.md tmp/
           cp dist/install tmp/
           cd tmp
-          declare -a arr=("darwin-amd64" "linux-amd64" "linux-386" "linux-arm" "windows/amd64.exe")
+          declare -a arr=("darwin-amd64" "linux-amd64" "linux-386" "linux-arm" "windows-amd64.exe")
           for i in "${arr[@]}"
           do
               OSARCH=${i%.*}
