--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
       - master
 jobs:
   test:
-    name: Test
+    name: compile & test
     runs-on: self-hosted
     steps:
       - name: Check out code
