try uploading from lib dir
Signed-off-by: Aaron Sutula <hi@asutula.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -166,4 +166,4 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
         run: |
           python3 -m pip install --user --upgrade twine
-          python3 -m twine upload ./py-grpc/dist/*
+          cd ./py-grpc && python3 -m twine upload dist/*
